tests/NormalTests/paczka1/small_fuzzy/41039299.err
Error in line 8: XbVVD8J A244 40,6
Error in line 12: XbVVD8J S950 46,7
